@@ -466,6 +466,7 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
   show up as (struck-out) bluelinks instead of redlinks on Special:WantedFiles
 * rebuildFileCache.php no longer creates inappropriate cache files for redirects
 * (bug 23119) WikiError class and subclasses are now marked as deprecated
+* (bug 18372) $wgFileExtensions will now override $wgFileBlacklist 
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent.
